--- a/app/assets/stylesheets/application/layout/_public-procurement.scss
+++ b/app/assets/stylesheets/application/layout/_public-procurement.scss
@@ -66,10 +66,6 @@
     padding-bottom: 24px;
 }
 
-.public-procurements__item:first-of-type  {
-    padding-top: 64px;
-  }
-
 .public-procurements__item:not(:first-child)  {
     padding-top: 24px;
 }
